objects/zkmulti__MCPrintServiceSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Deprecated</description>
    <fields>
        <fullName>zkmulti__DocPrinterId__c</fullName>
        <label>DocPrinterId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DocPrinterTray__c</fullName>
        <label>Doc Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NonThermalPrinterId__c</fullName>
        <label>NonThermalPrinterId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NonThermalPrinterTray__c</fullName>
        <label>Non Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleComputerId__c</fullName>
        <label>Scale Computer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleDeviceId__c</fullName>
        <label>Scale Device Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleName__c</fullName>
        <label>Scale Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleWeightUnit__c</fullName>
        <label>Scale Weight Unit</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ThermalPrinterId__c</fullName>
        <label>ThermalPrinterId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ThermalPrinterTray__c</fullName>
        <label>Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zenkraft Print Settings (Deprecated)</label>
</CustomObject>